tests/ui/cilk/cilk_spawn_in_cilk_for_continue_outer.stderr
error: cannot use `continue` within cilk_spawn
  --> $DIR/cilk_spawn_in_cilk_for_continue_outer.rs:10:13
   |
LL |             continue 'outer;
   |             ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

