tests/ui/cilk/cilk_spawn_in_cilk_for_continue_outer.rs
#![feature(cilk)]
// Tests that a cilk_spawn cannot continue its enclosing cilk_for.

//@ compile-flags: -C panic=abort
//@ no-prefer-dynamic

fn main() {
    'outer: cilk_for _i in 0..1 {
        cilk_spawn {
            continue 'outer;
            //~^ error: cannot use `continue` within cilk_spawn
        };
    }
}
